# ou-statarb

./: .gitignore  CLAUDE.md  IMPROVEMENTS.md  LOG.md  PREREGISTRATION.md  README.md  VERIFY.md  pyproject.toml  requirements.txt
.github/workflows/: broker-smoke.yml  ci.yml  live.yml
deploy/: LTP_STRATEGY.md  README_ltp.md  broker_smoke.py  ltp-agent.service  ltp_agent.py  ltp_broker.py  ltp_news.py  ltp_stream.py  report.py  report_weekly.py  run_strategy.py  set_leverage.py  snapshot.py  status.py  universe_scan.py  verify_close.py
examples/: demo_basket.py  demo_kalman.py  demo_ou.py  demo_risk.py  demo_walkforward.py  live_kalman.py  live_ou.py  paper_trade.py  real_data_djia.py  real_data_portfolio.py
quantconnect/: README.md  main.py
statarb/: __init__.py  broker.py  costs.py  johansen.py  kalman.py  ou.py  portfolio.py  risk.py  selection.py  thresholds.py  walkforward.py
tests/: test_deploy.py  test_extensions.py  test_kalman.py  test_ltp_killswitch.py  test_ou.py  test_viability.py
track_record/: README.md  equity.csv  state.json
track_record/positions/: 2026-07-07.json  2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json
