[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ou-statarb"
version = "0.1.0"
description = "Ornstein-Uhlenbeck statistical arbitrage with Kalman-filtered dynamic hedging"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "statsmodels>=0.14",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
live = ["yfinance>=0.2", "alpaca-py>=0.20"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["statarb*"]
